# artifact-review

./: .env.example  .gitignore  AGENTS.md  README.md  handoff.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: verify.yml
archive/: artefact_review_settings_ui.html  mockup-a-clean-panel.html  mockup-b-inline-annotations.html  mockup-c-split-editor.html
docs/: Artefact-ReviewBuildOut.txt  Artifact Review MVP Plan.md  api-contract.md  artifact-review-provider-registry-integration-review-v2.md  artifact-review-provider-registry-integration-review.md  completed-tasks.md  data-model.md  implementation-sequence.md  setup-readiness.md  verification-plan.md
docs/architecture/: bootstrap-architecture.md
docs/design/: review-workspace-ui-ux.md
docs/plans/: 01 Split Document Review From Admin And Settings.md  02 Reorganize Artifact Review Settings And Task Actions.md
docs/workflow/: artifact-review-0.1.0-state-workflow-definition.json
scripts/: doctor.mjs
service/: tsconfig.json
service/migrations/: 001_initial_schema.sql  002_review_and_provider_records.sql  003_provider_task_assets.sql  004_block_future_provider_task_hooks.sql  005_task_route_settings.sql
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: exporter.test.ts  http-export.test.ts  http-ingest.test.ts  http-provider-settings.test.ts  http-review.test.ts  http-workflow.test.ts  parser.test.ts  postgres.integration.test.ts  provider-readiness.test.ts  repositories.test.ts  workflow.test.ts
(+33 files in other folders)
