[package]
name = "artifact-review"
version = "0.1.0"
description = "Artifact Review desktop shell"
authors = ["Paul Marshall"]
edition = "2021"

[lib]
name = "artifact_review_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2.2.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

